    package enums;

    // Aftaletyper (ordlisten). Matcher CHECK på appointment.appointment_type.
    public enum AppointmentType {
        CONSULTATION,
        SCANNING,
        BLOOD_TEST,
        EGG_RETRIEVAL,
        EMBRYO_TRANSFER,
        PREGNANCY_TEST
    }