    package enums;

    // Dokumenttyper (ordlisten). Matcher CHECK på document.document_type.
    public enum DocumentType {
        BLOOD_TEST_RESULT,
        TREATMENT_PLAN,
        OTHER
    }