    package enums;

    // Notifikationstyper (ordlisten). Kun MEDICATION_REMINDER genereres i denne version (US12);
    // APPOINTMENT_REMINDER er en fremtidig feature.
    public enum NotificationType {
        MEDICATION_REMINDER,
        APPOINTMENT_REMINDER
    }