classDiagram
    class Patient {
        name
        dateOfBirth
    }

    class Diagnosis {
        name
        description
    }

    class FertilityJourney {
        startDate
        status
    }

    class Round {
        roundNumber
        startDate
        endDate
        treatmentType
        eggsRetrieved
        eggsFertilised
        embryosCreated
        embryosTransferred
        result
        status
    }

    class Appointment {
        dateTime
        appointmentType
        location
        status
        notes
        cancellationReason
    }

    class Medication {
        name
        description
    }

    class MedicationLog {
        scheduledDateTime
        takenDateTime
        dose
        unit
        taken
        note
    }

    class HormoneLog {
        dateTime
        hormoneType
        value
        unit
    }

    class Event {
        dateTime
        eventType
        description
        notes
    }

    class DiaryEntry {
        dateTime
        title
        content
    }

    class Document {
        title
        documentType
        createdDate
        filePath
        notes
    }

    class Notification {
        title
        message
        dateTime
        notificationType
        isRead
    }

    class JourneyStatus {
        ACTIVE
        PAUSED
        COMPLETED
        CANCELLED
    }

    class RoundResult {
        POSITIVE
        NEGATIVE
        PENDING
    }

    class RoundStatus {
        PLANNED
        IN_PROGRESS
        COMPLETED
        CANCELLED
    }

    class TreatmentType {
        IVF
        ICSI
        IUI
        FET
        OTHER
    }

    class AppointmentType {
        SCANNING
        CONSULTATION
        EGG_RETRIEVAL
        EMBRYO_TRANSFER
        BLOOD_TEST
        PREGNANCY_TEST
        OTHER
    }

    class AppointmentStatus {
        SCHEDULED
        COMPLETED
        CANCELLED
        NO_SHOW
    }

    class HormoneType {
        FSH
        LH
        E2_OESTRADIOL
        PROGESTERONE
        AMH
        OTHER
    }

    class EventType {
        STIMULATION_START
        SCANNING_RESULT
        EGG_RETRIEVAL
        FERTILISATION
        EMBRYO_TRANSFER
        PREGNANCY_TEST
        OTHER
    }

    class DocumentType {
        BLOOD_TEST_RESULT
        TREATMENT_PLAN
        INFORMATION
        CONSENT
        LAB_RESULT
        OTHER
    }

    class NotificationType {
        MEDICATION_REMINDER
        APPOINTMENT_REMINDER
        RESULT_AVAILABLE
        GENERAL_INFO
        OTHER
    }

    Patient "1" *-- "0..*" FertilityJourney : has a
    Patient "1" *-- "0..*" Diagnosis : has a
    Patient "1" *-- "0..*" Notification : has a
    FertilityJourney "1" *-- "0..*" Round : has a
    FertilityJourney "1" *-- "0..*" Appointment : has a
    FertilityJourney "1" *-- "0..*" DiaryEntry : has a
    Round "1" *-- "0..*" MedicationLog : has a
    Medication "1" -- "0..*" MedicationLog : refers to
    Round "1" *-- "0..*" HormoneLog : has a
    Round "1" *-- "0..*" Event : has a
    Round "1" *-- "0..*" Document : has a

    FertilityJourney "1" -- "1" JourneyStatus : is a
    Round "1" -- "1" RoundResult : is a
    Round "1" -- "1" RoundStatus : is a
    Round "1" -- "1" TreatmentType : is a
    Appointment "1" -- "1" AppointmentType : is a
    Appointment "1" -- "1" AppointmentStatus : is a
    HormoneLog "1" -- "1" HormoneType : is a
    Event "1" -- "1" EventType : is a
    Document "1" -- "1" DocumentType : is a
    Notification "1" -- "1" NotificationType : is a